--- a/frontend_ui/pubspec.yaml
+++ b/frontend_ui/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.2.1
   flutter_local_notifications: ^20.1.0
   timezone: ^0.10.0
+  flutter_web_notification_platform: ^1.0.4
 
 dev_dependencies:
   flutter_test:
