--- a/frontend_ui/pubspec.yaml
+++ b/frontend_ui/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_local_notifications: ^20.1.0
   timezone: ^0.10.0
   flutter_web_notification_platform: ^1.0.4
+  intl: ^0.20.2
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
